--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
     background-color: rgb(236, 236, 236);
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Chivo Mono', monospace !important ;
 }
 main {
     height: 80%;
